# yatzy

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  OVERHAUL_PLAN.md  docker-compose.yml  index.html  justfile  readme.md  repo-review-2026-03-29.md  requirements.txt  setup.py  yatzy.c  yatzy.ipynb
.benchmarks/: performance-baseline.json
.overhaul/: analytics-deep-dive.md  architecture.md  benchmark-post-cleanup.md  dependency-audit.md  duplication-audit.md  frontend-deep-dive.md  output-map.md  performance-baseline.json  performance-baseline.md  repo-map.md  rust-backend-deep-dive.md  secrets-audit.md  smells.md  target-structure.md  test-baseline.md
analysis/: pyproject.toml
analytics/: CLAUDE.md  pyproject.toml
analytics/scripts/: generate_treatise_data.py
analytics/src/yatzy_analysis/: adaptive.py  cli.py  compute.py  config.py  density.py  feature_engineering.py  io.py  scorecard.py  skill_ladder.py  store.py  surrogate.py  surrogate_eval.py  tail_analysis.py  theta_estimator.py  theta_validation.py
analytics/src/yatzy_analysis/plots/: categories.py  cdf.py  combined.py  compression.py  density.py  difficult_cards.py  difficult_sensitivity_cards.py  efficiency.py  frontier.py  mean_std.py  modality.py  multiplayer.py  percentile_frontiers.py  percentile_sweep.py  percentiles.py  quantile.py  scenario_cards.py  sensitivity.py  spec.py  state_flow.py  style.py  surrogate.py  winrate.py  yatzy_hypothesis.py
analytics/src/yatzy_analysis/profiling/: __init__.py  estimator.py  synthetic.py  validation.py
analytics/tests/: conftest.py  test_compute.py  test_config.py  test_io.py  test_style.py
backend/: CLAUDE.md  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  score_histogram.csv  yatzy.c
backend-legacy-c/: CLAUDE.md
backend-rust/: Cargo.toml  Dockerfile
backend-rust/src/: api_computations.rs  constants.rs  dice_mechanics.rs  game_mechanics.rs  lib.rs  phase0_tables.rs  server.rs  state_computation.rs  storage.rs  types.rs  widget_solver.rs
backend-rust/tests/: test_precomputed.rs
backend/analysis/src/yatzy_analysis/: cli.py  config.py  io.py
backend/analysis/src/yatzy_analysis/plots/: cdf.py  combined.py  density.py  mean_std.py  percentiles.py  quantile.py  style.py
backend/include/: api_computations.h  computations.h  constants.h  context.h  dice_mechanics.h  file_utilities.h  game_mechanics.h  phase0_tables.h  precompute_scores.h  storage.h  utilities.h  webserver.h  widget_solver.h  yatzy.h
backend/src/: api_computations.c  api_computations.rs  computations.c  constants.rs  context.c  dice_mechanics.c  file_utilities.c  game_mechanics.c  lib.rs  main.c  phase0_tables.c  precompute_scores.c  server.rs  simulations.c  state_computation.c  state_computation.rs  storage.c  storage.rs  types.rs  utilities.c  webserver.c  widget_solver.c  widget_solver.rs  yatzy.c
backend/src/simulation/: engine.rs  mod.rs
backend/tests/: test_context.c  test_dice_mechanics.c  test_helpers.h  test_phase0.c  test_precomputed.c  test_precomputed.rs  test_storage.c  test_widget.c
backend/theory/: optimal_yahtzee.md  optimal_yahtzee_pseudocode.md
blog/: CLAUDE.md  index.html  play.html  profile.html
configs/: theta_grid.toml
data/: 1-0.csv  2-0.csv  2-1000.csv  2-2000.csv  data.json  dice_transitions.csv
deploy/: Dockerfile.backend  Dockerfile.frontend  deploy-treatise.sh  deploy.sh  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: repo-review-2026-04-06.md
frontend/: CLAUDE.md  Dockerfile  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  readme.md  serve.py  vite.config.ts
legacy/: CLAUDE.md  Dockerfile  README.md
prob/: README.md  index.html
probabilities/: README.md  index.html
profiler/: CLAUDE.md  README.md  convert.py  index.html  package-lock.json
rl/: pyproject.toml
rl/src/yatzy_rl/: bridge.py  cli.py  evaluate.py  features.py
rl/src/yatzy_rl/approach_a/: policy.py
rl/src/yatzy_rl/approach_b/: policy.py
rl/src/yatzy_rl/approach_c/: train.py
rl/tests/: test_env.py  test_scoring.py  test_tables.py
scripts/: cfg_sweep.py  generate_strategy_guide.py  scaling_sweep.py
shared/: dice.css  dice.js  nav.js  path-prob.js  score-prob.js
solver/: CLAUDE.md  Cargo.toml  README.md
solver/.cargo/: config.toml
solver/src/: api_computations.rs  batched_solver.rs  constants.rs  dice_mechanics.rs  env_config.rs  forward_pass.rs  game_mechanics.rs  lib.rs  phase0_tables.rs  server.rs  simd.rs  state_computation.rs  storage.rs  types.rs  widget_solver.rs
solver/src/density/: forward.rs  mod.rs  transitions.rs
solver/src/profiling/: mod.rs  player_card.rs  qvalues.rs  scenarios.rs
solver/src/rosetta/: dsl.rs  mod.rs  policy.rs
solver/src/scenarios/: actions.rs  classify.rs  collect.rs  enrich.rs  io.rs  mod.rs  select.rs  types.rs
solver/src/simulation/: adaptive.rs  engine.rs  fast_prng.rs  heuristic.rs  lockstep.rs  mod.rs  multiplayer.rs  radix_sort.rs  raw_storage.rs  statistics.rs  strategy.rs  sweep.rs
solver/tests/: test_api.rs  test_audit_dp.rs  test_engine_equivalence.rs  test_precomputed.rs  test_properties.rs
test/: __init__.py  test_engine.py  test_engine_scoring.py  test_engine_validators.py  test_reroll_masks.py  test_transition_probability.py
theory/: README.md  algorithm_and_optimizations.md  analysis_and_insights.md  claude-comparison.md  claude-research-research-overview.md  claude-research-rl-limits.md  contradictions.md  gemini_3D_god.md  gemini_best_of_both_worlds_solver.md  gemini_input.md  human-plausible-states.md  performance_lab_report.md  performance_optimization.md  performance_optimizations.md  risk_parameter_theta.md  rosetta_lab_report.md  scaling_laws_report.md  theta_sweep_architecture.md  yatzy_grandmaster_playbook.md
treatise/: CLAUDE.md  build.mjs  for-fact-checking.md  index.html  orphans.md  package-lock.json  package.json  test-forward-pass.html
yatzy/: action.py  agent.py  brain.py  const.py  demo.py  engine.py  gameengine.py  gameenvironment.py  gamestate.py  input.py  (+15 more)
(+418 files in other folders)
