[project]
name = "yatzy-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "click>=8.1",
    "plotly>=6.0",
]

[project.optional-dependencies]
surrogate = ["scikit-learn>=1.3", "torch>=2.0", "joblib>=1.3"]

[project.scripts]
yatzy-analyze = "yatzy_analysis.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yatzy_analysis"]

[tool.ruff]
line-length = 100
