[package]
name = "yatzy"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "yatzy"
path = "src/bin/server.rs"

[[bin]]
name = "yatzy-precompute"
path = "src/bin/precompute.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
memmap2 = "0.9"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
