[package]
name = "yatzy"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "yatzy"
path = "src/bin/server.rs"

[[bin]]
name = "yatzy-precompute"
path = "src/bin/precompute.rs"

[[bin]]
name = "yatzy-simulate"
path = "src/bin/simulate.rs"

[[bin]]
name = "yatzy-category-sweep"
path = "src/bin/category_sweep.rs"

[[bin]]
name = "yatzy-conditional"
path = "src/bin/yatzy_conditional.rs"

[[bin]]
name = "pivotal-scenarios"
path = "src/bin/pivotal_scenarios.rs"

[[bin]]
name = "yatzy-decision-sensitivity"
path = "src/bin/decision_sensitivity.rs"

[[bin]]
name = "yatzy-multiplayer"
path = "src/bin/multiplayer.rs"

[[bin]]
name = "yatzy-underdog-sweep"
path = "src/bin/underdog_sweep.rs"

[[bin]]
name = "yatzy-frontier-test"
path = "src/bin/frontier_test.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
rand = { version = "0.9", features = ["small_rng"] }
memmap2 = "0.9"
tower-http = { version = "0.6", features = ["cors"] }

[features]
timing = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
